# textbook_quality

./: .gitignore  LICENSE  README.md  book_generator.py  pyproject.toml  tasks.py  toc_cleaner.py  topic_augmentor.py  topic_generator.py
alembic/: env.py  script.py.mako
alembic/versions/: 2023_09_20_1219-5032f4520049_.py  2023_09_26_1156-319c7bd1d8b7_.py  2023_10_02_1425-45f5c62a8b98_.py  2023_10_05_1820-dcff5f57b3b6_.py  2023_10_18_1325-a245397ecff0_.py
app/: settings.py  util.py
app/components/: parser.py  schemas.py
app/course/: embeddings.py  local_doc.py  models.py  schemas.py  tasks.py
app/db/: base_model.py  session.py  tables.py
app/lesson/: output.py  parser.py  tasks.py
app/llm/: exceptions.py  llm.py  models.py  prompts.py  schemas.py
app/llm/adaptors/: oai.py
app/llm/examples/: concepts.json  lesson.json  outline.json  rewrite.json  specific_topic.json  title.json  toc.json  topic.json
app/llm/generators/: concepts.py  lesson.py  outline.py  rewrite.py  title.py  toc.py  topic.py
app/llm/templates/: concepts.jinja  lesson.jinja  outline.jinja  rewrite.jinja  specific_topic.jinja  template.jinja  title.jinja  toc.jinja  topic.jinja
app/services/: dependencies.py  exceptions.py  models.py  network.py  schemas.py  service.py
app/services/adaptors/: custom_search.py  serpapi.py  serply.py
app/services/generators/: pdf.py  wiki.py
scripts/: clear_model_data.py  parse_books.py
